--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -85,7 +85,7 @@
     "In perceptrons learning can be done online, meaning that we can update the weights each time a single input pattern is presented.\n",
     "Learning is given at each timestep by:\n",
     "$$\n",
-    "\\Delta w_i = \\eta (o_k - y)\\tilde{x}_i\n",
+    "\\Delta w_i = \\eta (o_k - y)x_i\n",
     "$$\n",
     "or, in linear algebra notation:\n",
     "$$\n",
@@ -98,14 +98,14 @@
     "```\n",
     "In the case of many output units the learning rule becomes:\n",
     "$$\n",
-    "\\Delta w_{ij} = \\eta (o_{kj} - y_j)\\tilde{x}_i\n",
+    "\\Delta w_{ij} = \\eta (o_{kj} - y_j)x_i\n",
     "$$\n",
     "which in linear algebra notation is:\n",
     "\n",
     "$$\n",
-    "\\Delta \\mathbf{W} = \\eta (\\mathbf{o}_k - \\mathbf{y})\\mathbf{\\tilde{x}}^T\n",
+    "\\Delta \\mathbf{W} = \\eta (\\mathbf{o}_k - \\mathbf{y})\\mathbf{x}^T\n",
     "$$\n",
-    "where $\\mathbf{o}_k - \\mathbf{y}$ is now a vector, $\\mathbf{\\tilde{x}}^T$ is the vector $\\mathbf{\\tilde{x}}$ *transposed into a row vector*, and $(\\mathbf{o}_k - \\mathbf{y})\\mathbf{\\tilde{x}}^T$ is a new form of vector product: the [outer product](https://en.wikipedia.org/wiki/Outer_product#Vector_multiplication).\n",
+    "where $\\mathbf{o}_k - \\mathbf{y}$ is now a vector, $\\mathbf{x}^T$ is the vector $\\mathbf{x}$ *transposed into a row vector*, and $(\\mathbf{o}_k - \\mathbf{y})\\mathbf{x}^T$ is a new form of vector product: the [outer product](https://en.wikipedia.org/wiki/Outer_product#Vector_multiplication).\n",
     "\n",
     ">Given two vectors $\\mathbf{a} \\in \\mathbb{R}^n$ and $\\mathbf{b} \\in \\mathbb{R}^m$, the outer product $\\mathbf{a}\\mathbf{b}^T$ produces a matrix $\\mathbf{M} \\in \\mathbb{R}^{m\\times n}$.\n",
     "\n",
