--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -89,7 +89,7 @@
     "$$\n",
     "or, in linear algebra notation:\n",
     "$$\n",
-    "\\Delta \\mathbf{w} = \\eta(o_k - y)\\mathbf{\\tilde{x}} \n",
+    "\\Delta \\mathbf{w} = \\eta(o_k - y)\\mathbf{x} \n",
     "$$\n",
     "where $\\eta$ is a value determining the rate of weight change per timestep (it is typically very little) and $o_k - y$ is the error in reproducing the desired value.\n",
     "In python we write:\n",
