hopfield and utils

--- a/course/mnist.ipynb
+++ b/course/mnist.ipynb
@@ -95,7 +95,7 @@
     "# Each input is a raw vector.\n",
     "# The number of units of the network \n",
     "# corresponds to the number of input elements\n",
-    "n = img_side*img_side "
+    "n_mnist_pixels = img_side*img_side "
    ]
   },
   {
@@ -158,55 +158,6 @@
     "    axis(\"off\")\n",
     "\n",
     "show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Utilities\n",
-    "Let us include few utility functions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Set the maximum number of plots to be printed in a row\n",
-    "windows = 8\n",
-    "\n",
-    "# A custom plot that uses imshow to draw a matrix\n",
-    "# x      :  array           The matrix to be plotted\n",
-    "# fig    :  figure object   Figure device to use\n",
-    "# window :  int             The current subplot position\n",
-    "# windows:  int             Number of subplot\n",
-    "def plot_img(x, fig, window, windows = windows) :\n",
-    "    ax = fig.add_subplot(1, windows, window)\n",
-    "    ax.imshow(x, interpolation = 'none', \n",
-    "              aspect = 'auto', cmap=cm.Greys)  \n",
-    "    axis('off')\n",
-    "    fig.canvas.draw()\n",
-    "\n",
-    "\n",
-    "# Transform a raw input in an image matrix  \n",
-    "# x     :  vector   The raw input vector\n",
-    "# return:  array    A squared matrix\n",
-    "def to_mat(x) :\n",
-    "    return x.reshape( img_side, img_side )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we can put all stuff in a python file (we will call it utils.py) so that we can use it in our next notebooks just by adding this row: \n",
-    "```python\n",
-    "%run utils\n",
-    "```"
    ]
   },
   {
