--- a/course/Utilities.ipynb
+++ b/course/Utilities.ipynb
@@ -2,197 +2,215 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "code_folding": [],
-    "run_control": {
-     "marked": false
-    }
-   },
+   "metadata": {},
    "source": [
-    "# The Hopfield network"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "run_control": {
-     "marked": false
-    }
-   },
-   "source": [
-    "A Hopfield network is a form of recurrent artificial neural network popularized by John Hopfield in [1982](http://www.ncbi.nlm.nih.gov/pubmed/6953413).   It is an autoassociative network, which means that it can store a piece of data given as the activation of its own units and then retrieve it when you trigger a subpopulation of its units that is equal to a tiny sample of the same piece of data.\n",
-    "Learning is done by changing the weights of the connections between its units in a  *fake* hebbian way. You treat each input pattern as if it were the vector of the activations of units and highten the weights of the connections between concurrently active units. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "run_control": {
-     "marked": false
-    }
-   },
-   "source": [
-    "figure 1: an abstract example showing the functioning of an autoassociative network. On the left the network weights after learning. On the center, we trigger only one unit. On the right, all the associated units become activated.\n",
+    "### Utilities\n",
+    "The file ```utils.py``` contains nsome usefull stuff which is used throughout all notebooks in this site.\n",
     "\n",
-    "![figure_1](hopfield.png)"
+    "First of all it includes the initialization of all constants and variables for the use of MNIST database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# import the mnist class\n",
+    "from mnist import MNIST \n",
+    "\n",
+    "# init with the 'data' dir\n",
+    "mndata = MNIST('./data')    \n",
+    "\n",
+    "# Load data\n",
+    "mndata.load_training() \n",
+    "mndata.load_testing()\n",
+    "\n",
+    "# The number of pixels per side of all images\n",
+    "img_side = 28\n",
+    "\n",
+    "# Each input is a raw vector.\n",
+    "# The number of units of the network \n",
+    "# corresponds to the number of input elements\n",
+    "n_mnist_pixels = img_side*img_side "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div>Table of contents</div>\n",
-    "<div id=\"toc\"></div>"
+    "Then you find a function to plot mnist images in a row of subplots:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Set the maximum number of plots to be printed in a row\n",
+    "windows = 8\n",
+    "\n",
+    "# A custom plot that uses imshow to draw a matrix\n",
+    "# x      :  array           The matrix to be plotted\n",
+    "# fig    :  figure object   Figure device to use\n",
+    "# window :  int             The current subplot position\n",
+    "# windows:  int             Number of subplot\n",
+    "def plot_img(x, fig, window, windows = windows) :\n",
+    "    ax = fig.add_subplot(1, windows, window)\n",
+    "    ax.imshow(x, interpolation = 'none', \n",
+    "              aspect = 'auto', cmap=cm.Greys)  \n",
+    "    axis('off')\n",
+    "    fig.canvas.draw()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "run_control": {
-     "marked": false
+     "marked": true
     }
    },
    "source": [
-    "### Spreading of activations\n",
-    "\n",
-    "The activation of a unit in a Hopfield network is updated by evaluating the sign of the weighted sum of its inputs:\n",
-    "\n",
-    "![](sign_function.png)\n",
-    "\n",
-    "$$ \n",
-    "x_i = \\begin{cases}\n",
-    "  1  & \\quad \\text{if } \\sum_{j} w_{ij}x_j >  0\\\\\n",
-    "  -1  & \\quad \\text{otherwise}\\\\\n",
-    "  \\end{cases}\n",
-    "$$ \n",
-    "\n",
-    "There are two ways to implement the update of the units: **synchronous** and **asynchronous** update.  \n",
-    "\n",
-    "#### Syncronous update\n",
-    "\n",
-    "The units are updated altogether at each step, using as inputs the *freezed* activations of themselves at the previous step. \n",
-    "\n",
-    "In python you can write:\n",
-    "\n",
-    "```python\n",
-    "# n = len(x)\n",
-    "for i in xrange(n): \n",
-    "    w_sum = 0\n",
-    "    for j in xrange(n):\n",
-    "        w_sum += w[i,j]*x_previous[j]\n",
-    "    x[i] = sgn(w_sum)\n",
-    "...\n",
-    "...\n",
-    "x_previous = x\n",
-    "```\n",
-    "Using linear algebra we can rewrite it in a shorter form as:\n",
-    "$$\n",
-    "\\mathbf{x} = sgn(\\mathbf{W}\\mathbf{x})\n",
-    "$$\n",
-    "where $\\mathbf{x}$ is the vector of activations, $\\mathbf{W}$ is the matrix of inner weights and $\\mathbf{W}\\mathbf{x}$ is the [dot product](https://en.wikipedia.org/wiki/Dot_product#Algebraic_definition), a linear algebra operator that allows to calculate the  weighted sum at once. \n",
-    "Linear algebra notation is a far better way to implement neural networks in a program than iterating units. In particular, writing formulas with linear algebra notation in python (through the numpy library) improves both speed and readability. In the case of units activations in python you can write:\n",
-    "```python\n",
-    "x = sgn(dot(w,x))\n",
-    "```\n",
-    "*Using linear algebra in a neural network implementation is far simpler than writing loops, it is less error prone and also produces a much efficient code in terms of speed!!*\n",
-    "\n",
-    "#### Asynchronous update\n",
-    "\n",
-    "At each step a unit is randomly chosen for the update, while the others remain immutated. In python you write:\n",
-    "```python\n",
-    "i = chosen_index\n",
-    "w_sum = 0\n",
-    "for j in xrange(n):\n",
-    "    w_sum += w[i,j]*x[j]\n",
-    "x[i] = sgn(w_sum)\n",
-    "```\n",
-    "Using linear algebra leads to a shorter form also in this case:\n",
-    "\n",
-    "```python\n",
-    "i = chosen_index\n",
-    "x[i] = sgn(w[i,:],x)\n",
-    "```\n",
-    "Note how we don't need to store previous values here. \n",
-    "\n",
-    "In the simulation described below we will use asynchronous update (in a way it seems more biologicaly plausible).\n",
-    "\n",
-    "### Learning\n",
-    "\n",
-    "The learning of the weights is done offline at the start of the simulation. To update the weights you just treat each pattern $\\mathbf{p}_k$ (with $k = 1,...,n_p$) as if it were the current vector of activations of the network units and increase those weights where the activity at the two endings are high ([hebbian learning](https://en.wikipedia.org/wiki/Hebbian_theory#Principles)). This is done in practice by multiplying the two activities at the endings of each weight. The total amount of update is then calculated by adding together all the increments due to the different patterns to be learned. Finally the result is divided times the number of patterns to learn so that the weights are normalized. Putting it all together you have:\n",
-    "$$\n",
-    "w_{i,j} = \\frac{1}{n_p} \\sum_k p^k_i p^k_j \n",
-    "$$\n",
-    "In python we can write:\n",
-    "```python\n",
-    "w = zeros([n,n])\n",
-    "# P is an array of p vectors \n",
-    "for p in P:    \n",
-    "    # np = len(p)\n",
-    "    for i in xrange(np):  \n",
-    "        for j in xrange(np):\n",
-    "            # autoconnections are \n",
-    "            # forbidden in Hopfield nets\n",
-    "            if i != j :     \n",
-    "                w[i,j] += (1/float(np))*p[i]*p[j]\n",
-    "```\n",
-    "Where `P` is an array with `np` rows of `p` patterns.\n",
-    "\n",
-    "Once again linear algebra can help us and we can rewrite the learning rule as:\n",
-    "$$\n",
-    "    \\mathbf{W} = \\frac{1}{n_p}\\sum_k \\mathbf{p}_k \\mathbf{p}_k^T\n",
-    "$$\n",
-    "Where  $ \\mathbf{p}_k \\mathbf{p}_k^T$ is the [outer product](https://en.wikipedia.org/wiki/Outer_product#Definition_.28matrix_multiplication.29) of $\\mathbf{p}_k$ with itself. In python it becomes:\n",
-    "```python\n",
-    "# accumulate dot products\n",
-    "for p in P:\n",
-    "    w += (1/float(np))*outer(p,p)\n",
-    "\n",
-    "# cut autoconnections afterward\n",
-    "w *= 1.0 - eye(n,n)     \n",
-    "```\n",
-    "In this case we have only one loop instead of three!! \n",
-    "<p></p>\n",
-    "\n",
-    "\n",
-    "\n",
-    ">* A general rule: the **dot product** is for spreading the activity throughout a network, while the **outer product** is for weight update\n",
-    "\n",
-    "### Energy function\n",
-    "In each state of the network we can calculate a value that is given by:\n",
-    "$$\n",
-    "E = -\\frac{1}{2}\\sum_{i,j}w_{i,j}x_{i}x_{j}\n",
-    "$$\n",
-    "or in linear algebra notation:\n",
-    "$$\n",
-    "E = -\\frac{1}{2} \\mathbf{x}^T\\mathbf{W}\\mathbf{x}\n",
-    "$$\n",
-    "Hopfield proved that this value can only decrease or stay the same. When $E$ ceases to change the network has reached one of its attractor states. if the learned patterns are sufficiently orthogonal with each other attractor states correspond to the recalled patterns.\n",
-    "\n",
-    "In python it is:\n",
-    "```python\n",
-    "E = -0.5*dot(x,dot(w,x))\n",
-    "```"
+    "and a function to reshape raw mnist data as squared matrices:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------\n",
+    "# transform a raw input in an image matrix  \n",
+    "# x:      array    the raw input vector\n",
+    "# return  array    a squared matrix\n",
+    "def to_mat(x) :\n",
+    "    return x.reshape( img_side, img_side )"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "run_control": {
-     "marked": false
-    }
-   },
+   "metadata": {},
    "source": [
-    "<br><br><br><br><br><br><br><br><br><br><br><br><br><br>\n",
-    "<br><br><br><br><br><br><br><br><br><br><br><br><br><br>\n",
-    "<br><br><br><br><br><br><br><br><br><br><br><br><br><br>\n",
+    "Finally you have some general use functions.\n",
+    "\n",
+    "A list of transfer functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------\n",
+    "# step function\n",
+    "# return:    1 if x > 0\n",
+    "#            0 otherwise\n",
+    "def step(x) :\n",
+    "    return 1.0*(x>0)\n",
+    "\n",
+    "#-------------------------------------------------------------\n",
+    "# sigmoid function\n",
+    "# t   float temperature\n",
+    "def sigmoid(x,t=1.0) :\n",
+    "    return 1.0/(1.0 + exp(-x/t))\n",
+    "\n",
+    "#-------------------------------------------------------------\n",
+    "# RELU: rectifier linear unit function\n",
+    "# t   float temperature\n",
+    "def sigmoid(x) :\n",
+    "    return maximum(0,x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A function to build a dataset of points based on two lists (belonging/not belonging) centroids."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------\n",
+    "# Create an array with 2-dimensional patterns belonging to two categories\n",
+    "# n_patterns    :        int                 Number of patterns\n",
+    "# std_deviation :        float               Standard deviation of noise\n",
+    "# centroids1    :        2-elements-vectors  Points from which the\n",
+    "#                        list                patterns belonging to \n",
+    "#                                            the class are generated\n",
+    "# centroids2    :        2-elements-vectors  Points from which the\n",
+    "#                        list                patterns not belonging \n",
+    "#                                            to the class are generated\n",
+    "# returns       :        array               Each row contains a pattern as\n",
+    "#                                            its first two elements and\n",
+    "#                                            the group (belonging/not \n",
+    "#                                            belonging/) as its third element\n",
+    "def build_dataset( n_patterns = 100, \n",
+    "                   std_deviation = 0.2,\n",
+    "                   centroids1 = [ [-1.2, 1.8], [-1.8, 1.2] ], \n",
+    "                   centroids2 = [ [-0.2, 0.4], [-0.8, -0.2 ] ] ) :\n",
+    "    \n",
+    "    # Decide to which group patterns are from.\n",
+    "    # First half belongs to the class\n",
+    "    categories = arange(n_patterns)/(n_patterns/2)   \n",
+    "    \n",
+    "    # Each row of this array will contain a 2-element-wide \n",
+    "    # input pattern plus an integer defining to which category\n",
+    "    # the pattern belongs   \n",
+    "    data = zeros([n_patterns,3])\n",
+    "\n",
+    "    # Iterate the patterns to generate\n",
+    "    for t in xrange(n_patterns) :\n",
+    "        \n",
+    "        pattern = zeros(2)\n",
+    "        \n",
+    "        if categories[t] > 0 : \n",
+    "            index = int( rand()*len(centroids1) )\n",
+    "            pattern = array(centroids1[index])\n",
+    "        else :\n",
+    "            index = int( rand()*len(centroids2) )\n",
+    "            pattern = array(centroids2[index])\n",
+    "        \n",
+    "        # Add noise to each element of the centroid\n",
+    "        pattern += std_deviation*randn(2)\n",
+    "\n",
+    "        # Fill up data \n",
+    "        data[t,:] = hstack([pattern, categories[t]])\n",
+    "    \n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>\n",
+    "<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>\n",
+    "<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>\n",
+    "<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>\n",
     "Next cell is just for styling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 7,
    "metadata": {
-    "code_folding": [],
     "collapsed": false,
     "run_control": {
      "marked": true
@@ -453,7 +471,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +507,7 @@
    "version": "2.7.9"
   },
   "latex_envs": {
-   "bibliofile": "biblio.bib",
+   "bibliofile": "",
    "cite_by": "apalike",
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
