--- a/course/Utilities.ipynb
+++ b/course/Utilities.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "### Utilities\n",
-    "The file ```utils.py``` contains nsome usefull stuff which is used throughout all notebooks in this site.\n",
+    "The file ```utils.py``` contains some usefull stuff which is used throughout all notebooks in this site.\n",
     "\n",
     "First of all it includes the initialization of all constants and variables for the use of MNIST database:"
    ]
