--- a/course/hopfield-MNIST-simulation.ipynb
+++ b/course/hopfield-MNIST-simulation.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Storing and recalling MNIST digits"
+    "# Storing and recalling MNIST digits with Hopfield nets"
    ]
   },
   {
