--- a/course/mnist.ipynb
+++ b/course/mnist.ipynb
@@ -13,16 +13,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": true
+    }
+   },
    "source": [
     "The MNIST database of handwritten digits, available at [Yann Lecun web site](http://yann.lecun.com/exdb/mnist), has a training set of 60,000 examples, and a test set of 10,000 examples. It is a subset of a larger set available from NIST.\n",
     "\n",
     "The digits have been size-normalized and centered in a fixed-size image.\n",
     "It is a good database for people who want to try learning techniques and pattern recognition methods on real-world data while spending minimal efforts on preprocessing and formatting.\n",
     "\n",
+    "<br>\n",
+    "<div>Table of contents</div>\n",
+    "<div id=\"toc\"></div>\n",
+    "<br>\n",
+    "\n",
     "### MNIST numbers\n",
-    "|               |     |\n",
-    "|---------------|-----|\n",
+    "|                     |     |\n",
+    "|---------------------|-----|\n",
     "|**training images:** |60000|\n",
     "|**test images:** |10000|\n",
     "|**image pixels:** |28x28| \n",
@@ -30,42 +39,26 @@
     "|        |encoding 0-255|\n",
     "\n",
     "\n",
-    "\n",
     "### MNIST with pyhton\n",
     "\n",
-    "To obtain and use it in python just install [python-mnist](https://github.com/sorki/python-mnist):\n",
+    "###### Get the dataset and the python functionalities \n",
+    "\n",
+    "To can obtain and use it in python in two steps:\n",
+    "* Install [python-mnist](https://github.com/sorki/python-mnist):\n",
     "\n",
     "```\n",
     "sudo pip install python_mnist\n",
     "```\n",
     "\n",
-    "Then download the files of the dataset in a folder called data by running these few lines:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "display": "none"
-   },
-   "outputs": [],
-   "source": [
-    "# Download bash script \n",
-    "! wget https://raw.githubusercontent.com/sorki/python-mnist/master/get_data.sh > /dev/null 2>&1\n",
-    "    \n",
-    "# Run it to create the 'data' folder and fill it with the dataset files\n",
-    "! bash get_data.sh >/dev/null 2>&1\n",
-    "\n",
-    "# Remove the script file\n",
-    "! rm get_data.sh* > /dev/null 2>&1"
+    "* Download the files of the dataset in a folder called data. You can find them [here](mnist-data.zip). Just unzip them in the same directory of your python scripts."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can get the data in a readable way by using the load_training and load_testing methods of the MNIST object:"
+    "###### Using the dataset in python\n",
+    "Now we can use the dataset in a readable way by using the load_training and load_testing methods of the MNIST object:"
    ]
   },
   {
@@ -173,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -435,7 +428,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
