--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -24,10 +24,7 @@
    "metadata": {},
    "source": [
     "### Definitions\n",
-    "The first layer of units is $\\mathbf{x} = (x_0,\\dots,x_{n+1})$. At each timestep all units of this layer except the first unit $x_0$ are filled up with values from an input vector $\\mathbf{p}_k = (p_0,\\dots,p_n)$. We call the first unit the bias unit.\n",
-    "\n",
-    "\n",
-    "Each connection from a unit $x_i$ of the first layer to the output unit $y$ has a weight $w_i$ that is initially set to 0.\n",
+    "The first layer of units is $\\mathbf{x} = (x_0,\\dots,x_{n+1})$. At each timestep all units of this layer are filled up with values from an input vector $\\mathbf{p}_k = (1, p_0,\\dots,p_n)$. The first element of the input is prmanently set to 1. We call the first unit receiving the steady signal the bias unit. Each connection from a unit $x_i$ of the first layer to the output unit $y$ has a weight $w_i$ that is initially set to 0.\n",
     "\n",
     "### Spreading  of activations\n",
     "The activation of the output unit is given by:\n",
