--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -90,6 +90,8 @@
     "\\mathbf{x} = sgn(\\mathbf{W}\\mathbf{x})\n",
     "$$\n",
     "where $\\mathbf{x}$ is the vector of activations, $\\mathbf{W}$ is the matrix of inner weights and $\\mathbf{W}\\mathbf{x}$ is the [dot product](https://en.wikipedia.org/wiki/Dot_product#Algebraic_definition), a linear algebra operator that allows to calculate the  weighted sum at once. \n",
+    ">Given two vectors of the same size $\\mathbf{a} \\in \\mathbb{R}^n$ and $\\mathbf{b} \\in \\mathbb{R}^n$, the dot product $\\mathbf{a}^T\\mathbf{b}$ produces  the *scalar value* $a_0 b_0 + \\dots +a_n b_n$.\n",
+    "\n",
     "Linear algebra notation is a far better way to implement neural networks in a program than iterating units. In particular, writing formulas with linear algebra notation in python (through the numpy library) improves both speed and readability. In the case of units activations in python you can write:\n",
     "```python\n",
     "x = sgn(dot(w,x))\n",
@@ -141,7 +143,17 @@
     "$$\n",
     "    \\mathbf{W} = \\frac{1}{n_p}\\sum_k \\mathbf{p}_k \\mathbf{p}_k^T\n",
     "$$\n",
-    "Where  $ \\mathbf{p}_k \\mathbf{p}_k^T$ is the [outer product](https://en.wikipedia.org/wiki/Outer_product#Definition_.28matrix_multiplication.29) of $\\mathbf{p}_k$ with itself. In python it becomes:\n",
+    "Where  $ \\mathbf{p}_k \\mathbf{p}_k^T$ is the [outer product](https://en.wikipedia.org/wiki/Outer_product#Definition_.28matrix_multiplication.29) of $\\mathbf{p}_k$ with itself. \n",
+    ">Given two vectors $\\mathbf{a} \\in \\mathbb{R}^m$ and $\\mathbf{b} \\in \\mathbb{R}^n$, the outer product $\\mathbf{a}\\mathbf{b}^T$ produces a matrix $\\mathbf{M} \\in \\mathbb{R}^{m\\times n}$:\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "    a_{0} b_{0} & \\dots & a_{0} b_{n} \\\\\n",
+    "    \\vdots & \\ddots & \\vdots \\\\\n",
+    "    a_{m} b_{0} & \\dots & a_{m} b_{n}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "In python it becomes:\n",
     "```python\n",
     "# accumulate dot products\n",
     "for p in P:\n",
