--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -47,8 +47,7 @@
     "\n",
     "\n",
     "where $\\mathbf{w}^T$ is the vector  $\\mathbf{w} = (w_0, \\dots, w_{n+1})$ translated into a row vector and $\\mathbf{w}^T\\mathbf{x}$ is the [dot product](https://en.wikipedia.org/wiki/Dot_product#Algebraic_definition), a linear algebra operator that allows to calculate the  weighted sum at once.\n",
-    "\n",
-    ">Given two vectors of the same size $\\mathbf{a} \\in \\mathbb{R}^n$ and $\\mathbf{b} \\in \\mathbb{R}^n$, the dot product $\\mathbf{a}^T\\mathbf{b}$ produces a *scalar value*.\n",
+    ">Given two vectors of the same size $\\mathbf{a} \\in \\mathbb{R}^n$ and $\\mathbf{b} \\in \\mathbb{R}^n$, the dot product $\\mathbf{a}^T\\mathbf{b}$ produces  the *scalar value* $a_0 b_0 + \\dots +a_n b_n$.\n",
     "\n",
     "In python you write:\n",
     "```python\n",
@@ -102,7 +101,14 @@
     "$$\n",
     "where $ \\mathbf{net} = (y_0, \\dots, y_m)$ is the vector of weighted sums, $\\mathbf{W} \\in \\mathbb{R}^{m\\times n}$  is the matrix of weights from $ \\mathbf{x}$ to $ \\mathbf{y}$, and $\\mathbf{W}\\mathbf{x}$ is a multiplication of a matrix  times a vector, that is the [matrix product](https://en.wikipedia.org/wiki/Matrix_multiplication#Matrix_product_.28two_matrices.29) of which the dot product is a [special case](https://en.wikipedia.org/wiki/Matrix_multiplication#Row_vector_and_column_vector).\n",
     "\n",
-    ">Given two matrices $\\mathbf{A} \\in \\mathbb{R}^{m\\times k}$ and $\\mathbf{B} \\in \\mathbb{R}^{k\\times n}$, the matrix product $\\mathbf{A}\\mathbf{B}$ produces a new matrix $\\mathbf{P} \\in \\mathbb{R}^{m\\times n}$.\n",
+    ">Given two matrices $\\mathbf{A} \\in \\mathbb{R}^{m\\times k}$ and $\\mathbf{B} \\in \\mathbb{R}^{k\\times n}$, the matrix product $\\mathbf{A}\\mathbf{B}$ produces a new matrix $\\mathbf{P} \\in \\mathbb{R}^{m\\times n}$:\n",
+    "$$\n",
+    "    \\begin{bmatrix}\n",
+    "    \\mathbf{a}^T_{row_0}\\mathbf{b}_{col_0} &\\dots& \\mathbf{a}^T_{row_0}\\mathbf{b}_{col_n} \\\\\n",
+    "    \\vdots &\\ddots &\\vdots \\\\ \n",
+    "    \\mathbf{a}^T_{row_m}\\mathbf{b}_{col_0} &\\dots& \\mathbf{a}^T_{row_m}\\mathbf{b}_{col_n} \n",
+    "    \\end{bmatrix}\\\n",
+    "$$\n",
     "\n",
     "\n",
     "Magically, in pylab there is almost no change!:\n",
@@ -148,7 +154,14 @@
     "$$\n",
     "where $\\mathbf{o}_k - \\mathbf{y}$ is now a vector, $\\mathbf{x}^T$ is the vector $\\mathbf{x}$ *transposed into a row vector*, and $(\\mathbf{o}_k - \\mathbf{y})\\mathbf{x}^T$ is a new form of vector product: the [outer product](https://en.wikipedia.org/wiki/Outer_product#Vector_multiplication).\n",
     "\n",
-    ">Given two vectors $\\mathbf{a} \\in \\mathbb{R}^n$ and $\\mathbf{b} \\in \\mathbb{R}^m$, the outer product $\\mathbf{a}\\mathbf{b}^T$ produces a matrix $\\mathbf{M} \\in \\mathbb{R}^{m\\times n}$.\n",
+    ">Given two vectors $\\mathbf{a} \\in \\mathbb{R}^m$ and $\\mathbf{b} \\in \\mathbb{R}^n$, the outer product $\\mathbf{a}\\mathbf{b}^T$ produces a matrix $\\mathbf{M} \\in \\mathbb{R}^{m\\times n}$:\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "    a_{0} b_{0} & \\dots & a_{0} b_{n} \\\\\n",
+    "    \\vdots & \\ddots & \\vdots \\\\\n",
+    "    a_{m} b_{0} & \\dots & a_{m} b_{n}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
     "\n",
     "In python we can rewrite it as:\n",
     "```python\n",
@@ -201,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -463,7 +476,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
