--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "If the network is composed of more than one output units, the weighted sums can be expressed as:\n",
     "$$\n",
-    "net_j = \\sum_{ij} w_{ij} x_i\n",
+    "net_j = \\sum_{i}\\sum_{j} w_{ij} x_i\n",
     "$$\n",
     "and they can be written in linear algebra notation as:\n",
     "$$\n",
@@ -196,11 +196,14 @@
    "source": [
     "### The error\n",
     "\n",
-    "We can analyze if how much the network has learned by measuring the error. We compute the error at each timestep as the sum of the squares of the errors for each output unit:\n",
+    "We can analyze if how much the network has learned by measuring the error. We compute the error at each timestep as the sum of the squared errors (SSE) for each output unit:\n",
     "$$\n",
-    "E_t = \\sum_i \\frac{1}{2}(o_i - y_i)^2\n",
+    "E_t = \\sum_i \\frac{1}{2}(o_{it} - y_{it})^2\n",
     "$$\n",
-    "\n",
+    "Furthermore we sum all the SSE collected during each k-th presentation of all the series of the input patterns $p$:\n",
+    "$$\n",
+    "E_k = \\sum_{p}\\sum_{i} \\frac{1}{2}(o_{pi} - y_{pi})^2\n",
+    "$$\n",
     "If the network is learning the error diminuishes and it converges to a minimum. After a while the error cannot diminuish anymore and the network reaches a steady state. "
    ]
   },
