--- a/course/Utilities.ipynb
+++ b/course/Utilities.ipynb
@@ -113,6 +113,11 @@
    "outputs": [],
    "source": [
     "#-------------------------------------------------------------\n",
+    "# Add a bias unit to the input\n",
+    "def biased(x) :\n",
+    "    return hstack([1,x])\n",
+    "\n",
+    "#-------------------------------------------------------------\n",
     "# step function\n",
     "# return:    1 if x > 0\n",
     "#            0 otherwise\n",
@@ -122,13 +127,23 @@
     "#-------------------------------------------------------------\n",
     "# sigmoid function\n",
     "# t   float temperature\n",
-    "def sigmoid(x,t=1.0) :\n",
+    "def sigmfun(x, t = 1.0) :\n",
     "    return 1.0/(1.0 + exp(-x/t))\n",
     "\n",
+    "# sigmoid derivative\n",
+    "def sigmder(y) :\n",
+    "    return y*(1-y)\n",
+    "\n",
     "#-------------------------------------------------------------\n",
-    "# RELU: rectifier linear unit function\n",
-    "def sigmoid(x) :\n",
-    "    return maximum(0,x)"
+    "# hyperbolic tangent function\n",
+    "# th     float threshold\n",
+    "# alpha  float amplitude\n",
+    "def tanhfun(x, t = 0.0, alpha = 1.0) :\n",
+    "    return tanh(alpha*(x - th))\n",
+    "\n",
+    "# hyperbolic tangent derivative\n",
+    "def tanhder(y) :\n",
+    "    return 1-y**2\n"
    ]
   },
   {
