--- a/course/perceptron-simple-simulation.ipynb
+++ b/course/perceptron-simple-simulation.ipynb
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -491,9 +491,9 @@
        "}\n",
        "\n",
        "\n",
-       "div.input_area  { padding: 10px;  }\n",
+       "div.input_area  { padding: 10px; overflow: auto  }\n",
        ".rendered_html p{ text-align: left }\n",
-       "div.input_area>div.highlight  { padding:10px; }\n",
+       "div.input_area>div.highlight  { padding:10px; width: 500px !important}\n",
        "\n",
        "/* FONT_CODE */\n",
        ".input_area pre { font-size:10px; line-height:120% }\n",
@@ -710,7 +710,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
