--- a/course/Utilities.ipynb
+++ b/course/Utilities.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -266,9 +266,9 @@
        "}\n",
        "\n",
        "\n",
-       "div.input_area  { padding: 10px;  }\n",
+       "div.input_area  { padding: 10px; overflow: auto  }\n",
        ".rendered_html p{ text-align: left }\n",
-       "div.input_area>div.highlight  { padding:10px; }\n",
+       "div.input_area>div.highlight  { padding:10px; width: 500px !important}\n",
        "\n",
        "/* FONT_CODE */\n",
        ".input_area pre { font-size:10px; line-height:120% }\n",
@@ -485,7 +485,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
