--- a/course/backpropagation-simple-simulation.ipynb
+++ b/course/backpropagation-simple-simulation.ipynb
@@ -259,9 +259,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "marked": true
+    }
    },
    "outputs": [
     {
@@ -299,9 +302,9 @@
        "}\n",
        "\n",
        "\n",
-       "div.input_area  { padding: 10px;  }\n",
+       "div.input_area  { padding: 10px; overflow: auto  }\n",
        ".rendered_html p{ text-align: left }\n",
-       "div.input_area>div.highlight  { padding:10px; }\n",
+       "div.input_area>div.highlight  { padding:10px; width: 500px !important}\n",
        "\n",
        "/* FONT_CODE */\n",
        ".input_area pre { font-size:10px; line-height:120% }\n",
@@ -518,7 +521,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
