--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 2,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -246,9 +246,9 @@
        "}\n",
        "\n",
        "\n",
-       "div.input_area  { padding: 10px;  }\n",
+       "div.input_area  { padding: 10px; overflow: auto  }\n",
        ".rendered_html p{ text-align: left }\n",
-       "div.input_area>div.highlight  { padding:10px; }\n",
+       "div.input_area>div.highlight  { padding:10px; width: 500px !important}\n",
        "\n",
        "/* FONT_CODE */\n",
        ".input_area pre { font-size:10px; line-height:120% }\n",
@@ -465,7 +465,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
