--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -260,9 +260,9 @@
        "}\n",
        "\n",
        "\n",
-       "div.input_area  { padding: 10px;  }\n",
+       "div.input_area  { padding: 10px; overflow: auto  }\n",
        ".rendered_html p{ text-align: left }\n",
-       "div.input_area>div.highlight  { padding:10px; }\n",
+       "div.input_area>div.highlight  { padding:10px; width: 500px !important}\n",
        "\n",
        "/* FONT_CODE */\n",
        ".input_area pre { font-size:10px; line-height:120% }\n",
