--- a/course/mnist.ipynb
+++ b/course/mnist.ipynb
@@ -63,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T10:44:09.092892",
-     "start_time": "2017-05-15T10:44:09.051999"
+     "end_time": "2017-05-15T10:46:52.269026",
+     "start_time": "2017-05-15T10:46:49.826791"
     },
     "collapsed": false,
     "run_control": {
@@ -75,19 +75,7 @@
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named mnist",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-0ffbc8ba92a7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# import the mnist class\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mmnist\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMNIST\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# init with the 'data' dir\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmndata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMNIST\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'./data'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: No module named mnist"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import the mnist class\n",
     "from mnist import MNIST \n",
@@ -117,15 +105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-05-15T10:44:09.093407",
-     "start_time": "2017-05-15T08:44:09.058Z"
+     "end_time": "2017-05-15T10:46:55.206648",
+     "start_time": "2017-05-15T10:46:52.271267"
     },
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAk4AAABjCAYAAABt9I80AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGyNJREFUeJzt3XecVNX5x/HPQVBRFFBBg6IEUQGNxoKIBcECGgsYUYkN\nJTbESgkCKiR2sQaJxBh+gAqCYkElNqIiSoyCDRXBhg0wWBCVtuz5/XF5zswW4LLM7L0zfN+v175Y\ndmdnn7v3zsw5zzznOc57j4iIiIisXY2kAxAREREpFBo4iYiIiMSkgZOIiIhITBo4iYiIiMSkgZOI\niIhITBo4iYiIiMSkgZOIiIhITAU5cHLOveicW+Kc+3HVx6ikY8o159z2zrkXnHM/O+fecM7tnnRM\n+eCcO8Q5V+qc6550LLnmnDveOfeqc26pc25E0vHkg3PuYOfcjFWPw9edc3slHVMuOedqOudGOee+\nds5975yb7JxrmXRcubSBXKf3OefmOed+cM695Zw7PumYcm1DOI+QjteMghw4AR640Hu/5aqPbkkH\nlAf3AO8AWwHjgXHJhpN7zrmNgBuAD5KOJU9+AG4G7k06kHxwzm1MdG3eAtQFHgMeSjSo3NsImAPs\n672vDzxBdJzFpKiv01VuBpp47+sBfYGHnHObJRxTrhX9eUzLa0ahDpwAXNIB5ItzbgugA3Cj934Z\ncDuwk3Nuj2Qjy7mLgSeBBUkHkg/e+yne+8eA75OOJU92Azbz3o/x0RYEtwLNiuk69d4v895f672f\nt+pL/0d0jFsnGVcubQDXKd77d1c9lwJsDPxENAEvGhvCeSQlrxmFPHC6wTn3jXPuGedc86SDybFm\nwBLgF+fcFKAp8DHRC1VRcM5tB5wF3EYRD4KLXPnz5ohejJolEEt1ORD4ynv/bdKByLpxzg1zzi0F\n7gOO894vSTomiS9NrxmFOnDqDewI7ATMACauSuEVi82JZkRbAC2BesBioE6SQeXYEOA67/3ypAOR\nKpsF/OycO905VxPoA5QAxfYWCADOubrAHcDlScci685735PoOfQq4H7n3CYJhyTrJjWvGQU5cPLe\nz1iVQl8CDAC2A1okHFYu/QzU8d5/6b3fxnv/GtEg6qeE48oJ59yBQFPvfbHVw2xQVj2BnQRcBnwN\nNAA+AX5MMq58WFXP9Qgw1nv/cNLxSNV470u898OAZcDhSccj8aTtNaNm0gHkiKe43u75CKjtnGvk\nvf/aOVcL2Bn4MOG4cqUVcIBzbuWq/zugrXNuD+99rwTjknXkvX8V2A/AObcVcC7Rooai4ZyrAYwF\nZnvvByccjuSGo7heM4pdql4zCi7j5Jyr65w7yjm38apU6yCiQrH3Ew4tZ7z3i4FngCtWHWMvYK73\nfmaykeWG9/5O7/1G9gG8BJxbbIMm51wN59ymRCuzajrnNimyt5Rxzu226rFYHxgGTPbef550XDl2\nD1AK9Ew6kHwo9uvUObetc667c25L59xGzrnzgYbAtKRjy6ViPo9pe80ouIETUAu4HlhI9PbAAUSF\nfivX+FOF5wJgT+A74GTglGTDyauiWt2S5QzgF6AfcNqqzwcmGlHunQDMBz4jmgWemWg0Oeac2xHo\nDhwNLHLOLV7Vs+qghEPLpWK/TlcSHddHwLdEBcbHee+/SzKoPCj285gt0dcMF60iFhEREZG1KcSM\nk4iIiEgiNHASERERiUkDJxEREZGYNHASERERiSnfA6fpRNXvhfgRV9Jx6hhX/7Ei5vHdkYJYq/rx\nbMxjfDsFsVb1I66k49Qxrv7jl5jHd1cKYq3qx1Mxj/G9FMRa1Y+4ko4zr8eojJOIiIhITBo4iYiI\niMSkgZOIiIhITBo4iYiIiMSkgZOIiIhITBo4iYiIiMSkgZOIiIhITDWTDkDWzHvP9OnTARg2bBgA\no0ePplu3bgBcdNFFAOyzzz7JBCgiBcc2d7/ssssAGDp0KHvssQcATzzxBAA77bRTMsGJ5JBd64cf\nfjgAzjkmT568XvepjJOIiIhITAWTcfLes3LlSgB+/PHHCt+zbMwvv0QNamfPns3QoUMB6Nu3LwAP\nPvggm266KQD9+vUDYNCgQfkPvgpslPzWW29x5JFHApnj9t4zatQoAB5//HEAvv322wSirB7e+zBD\nOOOMMwB48cUXAdhtt92SCmu92Pm99tprgbLX4QsvvADAoYceWv2ByWp57/npp58AWLx4MQCTJk3i\nm2++AaB3794AbLLJJskEGJP3ns8++wyA++67L3z9vffeA2DWrFlA4Wac7LE1Z84cAJYtW8bLL78M\nZDL0a+Kco3PnzgCMHTsWgI033jgfoa437z0rVkQbJLz66qsADBw4kFdeeSXJsFLDe0+vXr0AmDZt\nGgBnnnnmet+vMk4iIiIiMaUq42QzhS+++IJly5YBmVHi1KlT+eGHHwB4+OGH13pfjRs35pJLLgHg\n0UcfBaBOnTrstddeQHpn8/Y3+O9//wtAly5dWLRoERDNhAC23HLLMAOyTNO0adPYd999geqZHXnv\nwyzOYjjhhBPy9vtef/11gHCMhcrO78iRIwG46aabAKhRowalpaVA5jxLsuxcffrppwAMGTIkPB+9\n++67FW6/YMECAO68885qirDqGjRoAEDbtm0BmDhxYpLhrDc7VzNnzmT06NEAPPTQQwCUlpby1Vdf\nrdN9PfbYYwD06NEDgNtvv50tt9wylyHnjL0+tG/fHoDtttuO+fPnh883RHY99O/fn+HDhwNQq1Yt\nIFPrtD6UcRIRERGJKRUZJxsdvvnmm0A0IrRR9LraaKONALjmmmvYfPPNATj11FMBaNSoEfXr1wfS\nVRtjx//LL78wY8YMIFPL8/XXX1e4/a677kqfPn0A6Nq1KwAHH3ww11xzDQADBgzIe8yQqTOyWoJc\nZ5zs71JaWhpm/Z9//nmZ7xWquXPnAoTMaiHx3vPaa68BcP/99wMwZcoUIJrxW8bslltuAaLHnWUn\n7bpu3bp1tcYcl11Xs2bNCpkjO8YlS5aE7zdu3BiALbbYgg8++ACA8ePHA1GWonnz5tUa97pwzoXn\nxkKtY1qdgQMH8tRTT1X4evnni7hZXaslPfvsszn44IPXP8BqMH/+/A0+42SmTZvG8uXLAcL5O+mk\nk9b7fpVxEhEREYkpFRknY7OfrbfeOlbGaf/99wegfv36YSWSrWixme3qpLGO5IILLmDMmDFlvlZZ\nZmX69On8/PPPQKZW66WXXqq07iKfbDZ24IEH5vX3zJs3j3/84x9A5rymKWMYl/ee559/HiCs+DQt\nWrQI/XO23Xbbao8tDrsWx40bF/r//O9//yvzvUMPPZSFCxcChKxo9vetHs5WKyXN4rLnmyuuuAKI\njrH86l2Isr0ATz/9NBBlDFu2bAkQVtfZ8aeV9z7Ui7799tsJR5NbRxxxRIWMU8OGDenevTtAqCOs\nUSOTM7DVaJY1zVbome1CZ39/Ozc33HADAGPGjGGrrbZa7e3t+WXmzJk0a9YMiGoUITev/co4iYiI\niMSUioyTjQBtBDlkyJAw+/7tb38LZDrcZn/NZu+bb755yLbcddddZe4zzWx0bJ3Bn3zyyQoznHbt\n2vG73/0OgD/96U9AVDOy9957A1CvXj0gqjeq7tmRzd7y7dxzzw2f77LLLkBhnF9j52Xq1KmcffbZ\nQMVeZH369EllvYn3npKSEiCzsvG8886rkPG88sorgaiOYOnSpQCccsopADzzzDPh/tK6KtJW3lpm\nszLNmjXj2WefBTI1TlbfV2is353V2mWz89y8efNUXpNr0qNHj9CDydSqVWuNtT6WbfzNb34DlK0r\ntfvab7/9ch1qXi1ZsiTpEHLq/PPPBzKPt/fff3+NNWfXX389AN999114TNuK+lxQxklEREQkplRk\nnIxlETp37sxhhx0GRL2XIOqb8s9//hPIdOi1lSHOuTBb+Pvf/16tMVdFdldwoExncPsbWJZpzJgx\nYfWadZk+55xzQh+WPffcE4j+BpMmTQIIK/PysX+dxf7OO++EvjX59v3334fPjzjiiGr5nfkwatSo\nCqsk27VrB0TdbNOaRbNVZeecc074WocOHYCoGz9QpsfNuHHjAEJ2xjnHDjvsAOSma28+WM+fbE2a\nNAEytZQ33nhjyDQZ67JdSJxzNGrUCCBkQAcPHhy+b5/Xq1cvVqftNLDHTs2aNSuco+zvZ7PnMrtO\nre4rm91X2rvBl2fvYrRp0ybhSHLDdvwwltXO5r0Pr6m2+to5F1Yu5/L5VRknERERkZhSlXEyzrkK\nXVrr1q0bPh8xYgQAf/jDH8Lt0zpbL897z+zZs4FMlb+9x96gQQN+9atfAZmZeZ06dTj22GMBwr9Q\n+ejZ6k5uvfVWAB544IF8HAIQ7dGVr/fRbSZoGa3sOgzLXBQCOw5bZTVixIjQZ8xq0wYOHAikr2bL\nYr/qqqtCvYDF2LNnz9AzzB6n9j3vfbh9NuuJZJnStLnnnnuATI1Thw4dwmqchg0bhttlHydQbVnX\nXLPjsNq07IxTIa8ki/s48t6HbKmdc6v7yvbnP/95ne43CTVrRi/j9hq5aNEiPv744yRDygnvPVdf\nfTWQ2UexRYsWQOadFrsdRK9/N998c/gc4IADDuDEE0/MeWzKOImIiIjElMqME1Sc2Q0aNCi8b2s9\nm2xVndVbpJkdx7Jly+jbty9A6Ddis/ZRo0aF1RuWzanKTMfe382nDz/8MHy+++675+V32N9p/vz5\noW/TFltskZfflWvZO9BXNuO5+OKLAUItX1rYdfqXv/wFiFanWH1Hx44dgajWp3bt2mV+zq7XZ599\nNmQIs7NWnTp1AtI3c7d4tt9+e6Bs5qX8bSpjPYAKVfnn2WJlx2f1ejfddFPIylhn6Wy2crs69v1c\nH865kL0+5JBDgGh1diHL3rPWsoGWVbNV85Vlrnv37h2699vj+ZVXXslLjMo4iYiIiMSU2oyTsRlR\nnTp1Qh2CZWWsv0/79u3D13r27Fnm59JmxowZFTrb2k7c1hOn0LRq1arKP2uzC+tr9PTTT4faLFvt\nAplaoOxat7Sz7tLZHd1tZ+5LLrkESNd1mt1R+u677wai+CzTZL2Osn300UcAnH766QC88cYb4Xu2\nJ1Tfvn1TdZyVWdOqq7/+9a9AVDdhX7Pbz5w5M9z+oIMOAqK6ikKTffxpP1eVsfPy2WefhaySvSOR\nzfZMrOwYLfN/4403hlXN5VdzSf7YObTnyxNPPDHsTGDPl/Ya6ZwLt7c9MUeOHBnuy/Zrzde1rIyT\niIiISEypzzgZ51xY5WKr6v74xz8CMHr0aO677z4gU01/5plnhhVqadK7d+8wUrYePtmj6KrKrlGo\n7nqF7777rsLXsvs9AaxcuZJ///vfAHz55ZdAVFtg2SXrQl67du3QN8fqC1asWBEyimmfDdtxP/bY\nY/Tv37/M9w455JAwK0pr5szqPWymB5kVcbYX28iRI3n88ceBzGqXxYsXA9H5sX3ATjvtNCDTby3N\n7LzZyqr33nsvrBzMzhCXzzgBoSeSPS/ZyslCk/bHVmXKZyk6depU5RrPtm3bAlFnfFOIfxPI7AmZ\ndnb+SkpKQqbQXte99+HvP23aNCCzV12vXr3C687DDz8cbt+tWzcg02k8X5RxEhEREYmpYDJOkBn9\n//73vwcIGag+ffowefJkgDDLnzt3bqiLsQr7JNiI2lY6vPXWW+E4jj/+eCA3s5rsXla2IiSfateu\nHX6fje4r699ju69776lVqxYAm222GRD15LDOxbaHWbt27ULfHOvau3TpUpo3b56vQ8mJ7BoLqHwl\nXdOmTdl2222B9M5kLctnq1a++eYbfv3rXwOVx2zZFlvtOG/ePLbZZhsAjjvuuNX+XBp471mxYgUA\nb775JgBdunQBov3K7Dq1Y2zTpk2oW7PMtnOOlStXApkasEsvvTT1q7GKlfd+jRn3NX3PnqP/9a9/\nhRqnQmV7vRaKBx98sMzOBFD2XSbbP9H+nThxIl999RWQ2VuwYcOGYXeRfD/nKOMkIiIiElNBZZyM\njSate+j48eOZOHEikNl7afjw4WHFT/bqrKRYn5vly5eHjMrJJ59cpfvy3of9d6yzLWRWbNn7wPlg\nf/thw4aFndPX1Mtmxx13BKLsWsuWLYG1rzqy1ZNWZ9O0adPUZi3Ks861VucDmb9Zv379Un0c2T1h\nLHty3HHHhVoCm/0df/zxnHXWWQDUr18fyHTxnzdvHl27dg33l0aWdVi+fHnIIFkW2wwaNIj27dsD\nhF3Yv/322/AYy15NZ7Vflu3ecccd6dy5M1A4e5xVlomZMmVK6veqs2vM9ip94YUXQq3MUUcdBVS+\nMs57H2rSbNVkobPr9cknn0x9Xy6Lz/a17N69e8jS2nPQAw88ED63/WmnTJkCRJmn8vWGCxcuDK9J\n1utx5513zkv8yjiJiIiIxFSQGSdjI8169epxxhlnAJneTiUlJbz00ksAvPjii0BmFVvSbAa0rqv+\nsruPX3fddUAmw9G4cWN69eoFRD2v8q1GjRr069evSj+7pkyE9z7UqxmrO0mr7F25n3nmGaDsMVot\nm3U/TzOL27KC2avrKmMzQPvXOUfTpk3zGGHV2ePH6poGDx4cHj/m6KOPBqLO7jbbtb/BMcccE1Zv\nWSapb9++4WuW9T711FPDbgbW/d4ycwB77713jo9s/VX2mHzkkUd4//33AUK2OK0s/iZNmoT999Zm\n0KBBAAwdOjRvcVUny+5DZnWsdfG3TEza2LsLjRs3DjXJ3bt3r3A7O0dWT2ur7LKVlpaG1/h8Pwcp\n4yQiIiISU0FmnMr3CJowYUKoti8pKQm3s1mS7eGTFuu6ms6O17IaQ4YMCe8N2x5gEyZMCLevrtqS\n6vo9doxpZt21v//++/C11q1bA5mOtmmt+anM2mK1a7L8norOOU455ZT8BlcF3vuw+s12XB8yZEjI\nztqKUKvVqlevXnhOsa7FM2bMYNdddwXgb3/7GxDVlVjXe9sXa8yYMWFV05FHHhlisFn/J598ko9D\nXC/nn39+mP0b73342h133JFEWOtsXZ5T01D7mku2nxuUfXcizey5/YQTTgirqLPPoR2H9aWyDKhz\njjFjxgCwxx57hNvvsMMOFe4jH5RxEhEREYmpYDJO3ns+/PBDILND8iOPPALA/PnzK9y+Zs2aoYYo\ne4VTUmzk7L0PXZetI/Pafu62224D4NprrwVg0aJFYW+wUaNGAYWVzVhXhXBsCxcuBMp2jb7wwguB\n6qk5q252TqyWp7LvpY1lT4YMGQJEHc2HDx8OZI7jP//5DxBlCSdNmgRksmpXX311WLWbPTu2Pc6s\nPuroo49m7NixAKEzvnMuPI7TqEWLFkmHEFt2rZpljWy1Y+3atWP97IgRI7j88svzGGX1Kd8XcLfd\ndguvlfYaM2zYsGSCWw2L2bK52V8z3nsWLVoERCvngfD/Zs2aVXlVei4kP6IQERERKRCpzTjZzMCy\nSWPHjg2ZJuvOXJlWrVoB0e7IuezMvb6ya0DmzZsHZEbbtopgq622CjNe60Xy9ttv88UXXwCZGomj\njjqKHj16lLnfYjZnzhzatGmTdBgV2DXavXv38LnV0QAceOCBQHGeIzveQqoTsb3nTElJScg+WT+0\nOXPmVPi5wYMHA1GfJssoZp/Tys6v1UrZv2llsV900UVh5dLHH38cvm89ji6++GIgf31x4rBr7uWX\nXwaifnXPPfccAJ9++imQyQSW/znrRWZZxD59+oTu78Y6xa8ta5VWdi47duwYXmNuueWWJENaq7U9\nN1otoWWGbeeFyZMnJ/q8qoyTiIiISEypyjjZjGLBggVh13Wb6cyaNWu1P9e6devQL8Wq9GvUqJHa\nmb6t/LP3nW1357p16zJ79uwKt7fMxWGHHQaU7Ra+ISgtLU06hDLKr3J87rnnwrVm/X0uvPDCMDsq\nZtnZibSz82GdvpctWxb2UjS2R1nbtm1D9+8mTZoAUf1a3OeUtD73rI5zjt133x1I/zm1TL31z4JM\nPzvbM7E8y0xNnz4dKHt+rPePZfHT0u9vfdjxFeKeifb8OnfuXO69914gU6d83nnnAZnVc0lRxklE\nREQkpsQzTtnvP19wwQVANJNf06znoIMOAgidsjt27Fjhfem0zfisRqdVq1ahP0z5Oq4FCxaE29sO\n8127dq3QQyVtx5Zv06ZNC3ujpckPP/wAlD1vjRo1AtJfW5Arto9b2vfGAsJOAraqdcaMGWHfSKsz\ntA7flc3Ui/1xZ7suWA+qtJ7TyuKyWpi4GjZsGGpg7fnVdnQohvNsq8/sWi+/F2Mh6NChQ+h8bjuD\nWL1h0udIGScRERGRmKo942Szhddeew2IeqpYBubLL79c7c9tttlm4b3tAQMGAFEfFpP0CHR1LC57\nT3bChAmhn0z5VT6Qef/e3m/fZZddUntsEqlsBlzs56z8rvTNmjUDoq7Yli1u0KBBMsFVIrvfks1e\n7d/V3X5DYzVO1tPJujSnzYgRI4Con9/o0aPXevudd945vFZYhvTcc88N164plnM+fvz4kD0rpP5c\n5XXr1i10+U/TCnlQxklEREQktsRqnB599NEy/2Zr2bIlxx57LJDpxNynT5+wW7lJy+gzDou1UaNG\n4X1a+zfOz21IrAPzQw89lHAka9a8eXMgWvU4derUhKNJhl2f/fv3B6KZvO1ybn2BbM/IpG2Ij6W4\nnHOhT1z2arU0sfO3zz77AHD33Xez//77A3DVVVcB0V6RtrLausF36tSJ7bbbbrX3V2zatm0bVqFb\nb6pCYudlwIAB4d2ltFHGSURERCQml+eVE9OBfSr7RlV+bzXPEOL+snQuPYknlceYw5qhEqBWjNvd\nAVy6rne+pmu4Gq/V54CKG8ZV9DawZ65/uf0NfvzxRwBOPvlknn/+eQC6dOkCRDUp2fWIVZDK6zTH\niv0YlwBx0h93AT3j3OG6vIZU0+NxEnBMjNu9B+QtDZvnmstiv04hxjEq4yQiIiISU2I1TsX6/rKs\nv0K5Ngolznyyv4GtWBs3bhxXXnklkNlfatCgQampc5Liocdf5fR3yT9lnERERERiSrxzuIgUPpvl\n1q1bN6yms39FRIpJvgdOq9+Zt3jMSDqAalCox1gS83ZfUrjHOCfm7T4g/t+jUBXqOVwXhXqMS2Pe\n7gsK9xg/inm794n/9yhUhXoOY8n3qjoRERGRoqEaJxEREZGYNHASERERiUkDJxEREZGYNHASERER\niUkDJxEREZGYNHASERERiUkDJxEREZGYNHASERERiUkDJxEREZGYNHASERERiUkDJxEREZGYNHAS\nERERiUkDJxEREZGYNHASERERiUkDJxEREZGYNHASERERiUkDJxEREZGYNHASERERiUkDJxEREZGY\nNHASERERien/AcYMzHRee8ynAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f92592e9a50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "from pylab import *\n",
