--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -202,8 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-05-15T11:13:33.249756",
+     "start_time": "2017-05-15T11:13:33.235128"
+    },
     "code_folding": [],
     "collapsed": false,
     "run_control": {
@@ -465,7 +469,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
