--- a/course/perceptron-simple-simulation.ipynb
+++ b/course/perceptron-simple-simulation.ipynb
@@ -393,6 +393,292 @@
     "show()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>\n",
+    "The next cell is just for styling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-05-15T12:00:11.568507",
+     "start_time": "2017-05-15T12:00:11.554031"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "\n",
+       "/* PRINT */\n",
+       "\n",
+       "#toc ol {\n",
+       "    font-size: 20px; \n",
+       "    line-height: 120%; \n",
+       "    padding: 0; \n",
+       "    margin-left: 20px; \n",
+       "    list-style-type: decimal;\n",
+       "}\n",
+       "\n",
+       "/* PRINT */\n",
+       "div.text_cell_render table, \n",
+       "div.text_cell_render  th,\n",
+       "div.text_cell_render  tr,\n",
+       "div.text_cell_render td {\n",
+       "    border: 0px solid black;\n",
+       "}\n",
+       "div.MathJax_Display {padding: 40px 5px 40px 5px}\n",
+       "\n",
+       "div.input_area  { padding: 10px;  }\n",
+       "\n",
+       "div.input_area  { \n",
+       "    min-width: 20em !important; \n",
+       "    overflow-x: hide\n",
+       "} \n",
+       "div.input_area pre {  \n",
+       "    min-width: 20em !important; \n",
+       "}\n",
+       "\n",
+       "\n",
+       "div.input_area  { padding: 10px; overflow: auto  }\n",
+       ".rendered_html p{ text-align: left }\n",
+       "div.input_area>div.highlight  { padding:10px; width: 800px !important}\n",
+       "\n",
+       "/* FONT_CODE */\n",
+       ".input_area pre { font-size:10px; line-height:120% }\n",
+       "\n",
+       "/* FONT_TEXT */\n",
+       "div.text_cell_render { font-size:20px;  line-height:120% }\n",
+       "\n",
+       "/* FONT_QUOTE */\n",
+       ".text_cell_render pre { font-size:14px; line-height:120% }\n",
+       "\n",
+       "/* BACKGROUND */\n",
+       "div .input_area { background-color:#333333;}\n",
+       "blockquote { background-color:#ffff66; }\n",
+       "\n",
+       "/* BUILTIN */\n",
+       ".input_area .highlight .bp { color: #CD5C5C } /* Name.Builtin.Pseudo */\n",
+       "\n",
+       "/* KEYWORD */\n",
+       ".input_area .highlight .k { color: #F0E68C; font-weight: bold } /* Keyword */\n",
+       ".input_area .highlight .kc { color: #F0E68C; font-weight: bold } /* Keyword.Constant */\n",
+       ".input_area .highlight .kd { color: #F0E68C; font-weight: bold } /* Keyword.Declaration */\n",
+       ".input_area .highlight .kn { color: #F0E68C; font-weight: bold } /* Keyword.Namespace */\n",
+       ".input_area .highlight .kp { color: #F0E68C; font-weight: bold } /* Keyword.Pseudo */\n",
+       ".input_area .highlight .kr { color: #F0E68C; font-weight: bold } /* Keyword.Reserved */\n",
+       ".input_area .highlight .kt { color: #F0E68C; font-weight: bold } /* Keyword.Type */\n",
+       ".input_area .highlight .ow { color: #F0E68C; font-weight: bold } /* Operator.Word */\n",
+       "\n",
+       "/* VARIABLE */\n",
+       ".input_area .highlight pre { color: #FFFFFF }\n",
+       ".input_area .highlight .n { color: #FFFFFF } /* Name.Variable */\n",
+       ".input_area .highlight .nv { color: #FFFFFF } /* Name.Variable */\n",
+       ".input_area .highlight .na { color: #FFFFFF } /* Name.Attribute */\n",
+       ".input_area .highlight .no { color: #FFFFFF } /* Name.Constant */\n",
+       ".input_area .highlight .nl { color: #FFFFFF } /* Name.Label */\n",
+       "\n",
+       "/* FUNCTION */\n",
+       ".input_area .highlight .nb { color: #BDB76B } /* Name.Builtin */\n",
+       ".input_area .highlight .nf { color: #BDB76B } /* Name.Function */\n",
+       ".input_area .highlight .vc { color: #BDB76B } /* Name.Variable.Class */\n",
+       ".input_area .highlight .vg { color: #BDB76B } /* Name.Variable.Global */\n",
+       ".input_area .highlight .vi { color: #BDB76B } /* Name.Variable.Instance */\n",
+       ".input_area .highlight .nc { color: #BDB76B } /* Name.Class */\n",
+       ".input_area .highlight .ni { color: #BDB76B } /* Name.Entity */\n",
+       ".input_area .highlight .ne { color: #BDB76B } /* Name.Exception */\n",
+       ".input_area .highlight .nn { color: #BDB76B } /* Name.Namespace */\n",
+       ".input_area .highlight .nt { color: #BDB76B } /* Name.Tag */\n",
+       "\n",
+       "\n",
+       "\n",
+       "/* OPERATOR */\n",
+       ".input_area .highlight .o { color: #FFFFFF; font-weight:bold } /* Operator */\n",
+       ".input_area .highlight .p { color: #FFFFFF; font-weight:bold } /* Operator */\n",
+       "\n",
+       "\n",
+       "/* DECORATOR */\n",
+       ".input_area .highlight .nd { color: #BDB76B } /* Name.Decorator */\n",
+       "\n",
+       "\n",
+       "/* COMMENT */\n",
+       ".input_area .highlight .c { color: #87CEEB; font-style: italic } /* Comment */\n",
+       ".input_area .highlight .cm { color: #87CEEB; font-style: italic } /* Comment.Multiline */\n",
+       ".input_area .highlight .cp { color: #87CEEB; } /* Comment.Preproc */\n",
+       ".input_area .highlight .c1 { color: #87CEEB; font-style: italic } /* Comment.Single */\n",
+       ".input_area .highlight .cs { color: #87CEEB; font-style: italic } /* Comment.Special */\n",
+       "\n",
+       "\n",
+       "/* NUMBER */\n",
+       ".input_area .highlight .mb { color: #98FB98 } /* Literal.Number.Bin */\n",
+       ".input_area .highlight .mf { color: #98FB98 } /* Literal.Number.Float */\n",
+       ".input_area .highlight .mh { color: #98FB98 } /* Literal.Number.Hex */\n",
+       ".input_area .highlight .mi { color: #98FB98 } /* Literal.Number.Integer */\n",
+       ".input_area .highlight .mo { color: #98FB98 } /* Literal.Number.Oct */\n",
+       ".input_area .highlight .m { color: #98FB98 } /* Literal.Number */\n",
+       ".input_area .highlight .il { color: #98FB98 } /* Literal.Number.Integer.Long */\n",
+       "\n",
+       "/* STRING */\n",
+       ".input_area .highlight .s { color: #FFA0A0 } /* Literal.String */\n",
+       ".input_area .highlight .w { color: #FFA0A0 } /* Text.Whitespace */\n",
+       ".input_area .highlight .sb { color: #FFA0A0 } /* Literal.String.Backtick */\n",
+       ".input_area .highlight .sc { color: #FFA0A0 } /* Literal.String.Char */\n",
+       ".input_area .highlight .sd { color: #FFA0A0; font-style: italic } /* Literal.String.Doc */\n",
+       ".input_area .highlight .s2 { color: #FFA0A0 } /* Literal.String.Double */\n",
+       ".input_area .highlight .se { color: #FFA0A0; font-weight: bold } /* Literal.String.Escape */\n",
+       ".input_area .highlight .sh { color: #FFA0A0 } /* Literal.String.Heredoc */\n",
+       ".input_area .highlight .si { color: #FFA0A0; font-weight: bold } /* Literal.String.Interpol */\n",
+       ".input_area .highlight .sx { color: #FFA0A0 } /* Literal.String.Other */\n",
+       ".input_area .highlight .sr { color: #FFA0A0 } /* Literal.String.Regex */\n",
+       ".input_area .highlight .s1 { color: #FFA0A0 } /* Literal.String.Single */\n",
+       ".input_area .highlight .ss { color: #FFA0A0 } /* Literal.String.Symbol */\n",
+       "\n",
+       "\n",
+       "\n",
+       "/********************************************************************************/\n",
+       "/********************************************************************************/\n",
+       "\n",
+       "/* JUPYTER */\n",
+       "\n",
+       "/* FONT_EDIT */\n",
+       ".cm-s-default span { font-size:16px; line-height:120% }\n",
+       "\n",
+       "/* BACKGROUND_EDIT */\n",
+       "div .cm-s-default { background-color: #888888;}\n",
+       "\n",
+       "/* CURSOR */\n",
+       ".input_area .CodeMirror div.CodeMirror-cursor { border-left: 5px solid #FFFFFF; }\n",
+       ".input_area .CodeMirror div.CodeMirror-secondarycursor { border-left: 5px solid #FFFFFF;}\n",
+       ".input_area .CodeMirror.cm-fat-cursor div.CodeMirror-cursor { background: #FFFFFF;}\n",
+       ".input_area .cm-animate-fat-cursor { background-color: #FFFFFF; }\n",
+       "\n",
+       "/* BUILTIN */\n",
+       ".input_area .cm-s-ipython span.cm-builtin { color: #CD5C5C } \n",
+       ".input_area .cm-s-ipython span.cm-variable-2 { color: #CD5C5C } \n",
+       ".input_area .cm-s-ipython span.cm-variable-3 { color: #CD5C5C } \n",
+       "\n",
+       "/* KEYWORD */\n",
+       ".input_area .cm-s-ipython span.cm-keyword { color: #F0E68C; font-weight:700 } \n",
+       "\n",
+       "/* VARIABLE */\n",
+       ".input_area span.cm-variable { color: #FFFFFF } \n",
+       ".input_area span.cm-def { color: #FFFFFF } \n",
+       "\n",
+       "\n",
+       "/* OPERATOR */\n",
+       ".input_area .cm-s-ipython span.cm-operator { color: #FFFFFF; font-weight:700 } \n",
+       ".input_area .cm-s-ipython span { color: #FFFFFF; font-weight:700 } \n",
+       "\n",
+       "/* DECORATOR */\n",
+       ".input_area .cm-s-ipython span.cm-meta { color: #BDB76B } \n",
+       "\n",
+       "/* COMMENT */\n",
+       ".input_area .cm-s-ipython span.cm-comment { color:#87CEEB; font-style:italic } \n",
+       "\n",
+       "/* NUMBER */\n",
+       ".input_area .cm-s-ipython span.cm-number { color: #98FB98 } \n",
+       "\n",
+       "/* STRING */\n",
+       ".input_area .cm-s-ipython span.cm-string { color: #FFA0A0 } \n",
+       ".input_area .cm-s-ipython span.cm-string-2 { color: #FFA0A0 } \n",
+       "\n",
+       "</style><script> \n",
+       "// Converts integer to roman numeral\n",
+       "function romanize(num) {\n",
+       "    var lookup = {M:1000,CM:900,D:500,CD:400,C:100,XC:90,L:50,XL:40,X:10,IX:9,V:5,IV:4,I:1},\n",
+       "    roman = '',\n",
+       "    i;\n",
+       "    for ( i in lookup ) {\n",
+       "        while ( num >= lookup[i] ) {\n",
+       "            roman += i;\n",
+       "            num -= lookup[i];\n",
+       "        }\n",
+       "    }\n",
+       "    return roman;\n",
+       "}\n",
+       "\n",
+       "// Builds a <ul> Table of Contents from all <headers> in DOM\n",
+       "function createTOC(){\n",
+       "    var toc = \"\";\n",
+       "    var level = 0;\n",
+       "    var levels = {}\n",
+       "    $('#toc').html('');\n",
+       "\n",
+       "    $(\":header\").each(function(i){\n",
+       "        if (this.id=='tocheading'){return;}\n",
+       "\n",
+       "        titleText = this.innerHTML;\n",
+       "        openLevel = this.tagName[1];\n",
+       "        if(openLevel>1) {\n",
+       "            openLevel-=1\n",
+       "\n",
+       "        if (levels[openLevel]){\n",
+       "            levels[openLevel] += 1;\n",
+       "        } else{\n",
+       "            levels[openLevel] = 1;\n",
+       "        }\n",
+       "\n",
+       "        if (openLevel > level) {\n",
+       "            toc += (new Array(openLevel - level + 1)).join('<ol type=\"1\" class=\"toc\">');\n",
+       "        } else if (openLevel < level) {\n",
+       "            toc += (new Array(level - openLevel + 1)).join(\"</ol>\");\n",
+       "            for (i=level;i>openLevel;i--){levels[i]=0;}\n",
+       "        }\n",
+       "\n",
+       "        level = parseInt(openLevel);\n",
+       "\n",
+       "\n",
+       "        if (this.id==''){this.id = this.innerHTML.replace(/ /g,\"-\")}\n",
+       "        var anchor = this.id;\n",
+       "\n",
+       "        toc += '<li><a href=\"#' + anchor + '\">' + titleText\n",
+       "        + '</a></li>';\n",
+       "    }\n",
+       "\n",
+       "    });\n",
+       "\n",
+       "\n",
+       "    if (level) {\n",
+       "        toc += (new Array(level + 1)).join(\"</ol>\");\n",
+       "    }\n",
+       "\n",
+       "\n",
+       "    $('#toc').append(toc);\n",
+       "\n",
+       "};\n",
+       "\n",
+       "// Executes the createToc function\n",
+       "setTimeout(function(){createTOC();},100);\n",
+       "\n",
+       "// Rebuild to TOC every minute\n",
+       "setInterval(function(){createTOC();},60000);\n",
+       "</script>\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"../style/ipybn.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()"
+   ]
   }
  ],
  "metadata": {
